--- a/src/App.css
+++ b/src/App.css
@@ -2,20 +2,23 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  min-height: 10vh;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 2rem;
+}
+
+.App-header-title,
+.App-social {
+  font-size: 2rem;
+}
+
+.App-main {
+  background-color: #0a0b20;
+  min-height: 90vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -24,15 +27,12 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.App-main-title
+{
+  font-family: 'Cinzel', serif;
+  font-size: calc(10px + 10vmin);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App-link {
+  color: #61dafb;
 }
